# magnetic-vm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
compiler/: CMakeLists.txt
compiler/src/: CMakeLists.txt  main.cc
compiler/src/cfg/: CMakeLists.txt  basic-block.cc  basic-block.h  control-flow-graph.cc  control-flow-graph.h
compiler/src/codegen/: CMakeLists.txt  codegen-method.cc  codegen-method.h  environment.cc  environment.h  instructions.cc  instructions.h  local-variables.cc  local-variables.h  runtime-abi.cc  runtime-abi.h
compiler/src/compilation-unit/: CMakeLists.txt  compilation-unit.cc  compilation-unit.h
compiler/src/context/: CMakeLists.txt  context.cc  context.h  exception.h
compiler/src/types/: CMakeLists.txt  array.cc  array.h  mangle.cc  mangle.h  type.cc  type.h
compiler/src/types/class/: class.cc  class.h  descriptor.cc  descriptor.h  field.cc  field.h  instantiate.cc  instantiate.h  layout.cc  layout.h  method.cc  method.h  vtable.cc  vtable.h
compiler/src/types/pool/: path.cc  path.h  pool.cc  pool.h
runtime/: CMakeLists.txt
runtime/src/: strings.cc  strings.h
